user name text align corrected

--- a/app/react/components/sizung/components/User/index.css
+++ b/app/react/components/sizung/components/User/index.css
@@ -18,6 +18,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  vertical-align: middle;
 }
 
 .circle-badge {
